made map buttons look bigger on smaller device screen again to make sure they are easy to read

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ html, body {
 @media(max-width: 768px) {
     .map-buttons button {
         margin: 3px 0px 3px 0px;
-        font-size: 15px;
+        font-size: 18px;
         width: 120px;
     }
 }
